database path in prodcution

--- a/config/database.yml
+++ b/config/database.yml
@@ -35,7 +35,7 @@ development:
 
 test: &test
   adapter: postgresql
-  database: sangam_test
+  database: tc_test
   username: sangam
   password: 'lemon124'
   charset: unicode
@@ -46,17 +46,14 @@ test: &test
 
 production:
   adapter: postgresql
-  database: sangam_production
-  username: sangam
-  password: 'lemon124'
+  database: tc_production  
   charset: unicode
-  pool: 5
-  host: localhost 
+  pool: 5   
   port: 5432
 
 staging:
   adapter: postgresql
-  database: sangam_production
+  database: tc_production
   username: sangam
   password: 'lemon124'
   charset: unicode
